# monox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  Makefile.toml  README.md  README.zh.md  RELEASE.md  TODOLIST.md  build.rs  cliff.toml  install.sh  monox.toml  package.json  pnpm-lock.yaml  pre-release.sh  release.toml  rustfmt.toml
.cargo/: config.toml
.cursor/rules/: coding-standards.mdc  development-workflow.mdc  precautions.mdc  project-overview.mdc  token-optimization.mdc
docs/: release.md
npm/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
npm/monox/: install.js  package.json
scripts/: release.sh  update-npm-versions.js  update-npm-versions.sh
src/: main.rs
src/cli/: analyze.rs  check.rs  exec.rs  fix.rs  init.rs  mod.rs  run.rs  update.rs
src/core/: analyzer.rs  cache.rs  checker.rs  executor.rs  mod.rs  scheduler.rs
src/i18n/: en_us.rs  mod.rs  zh_cn.rs
src/models/: config.rs  mod.rs  package.rs  task.rs
src/ui/: mod.rs  runner.rs  spinner.rs  summary.rs  verbose.rs
src/utils/: colors.rs  constants.rs  fs.rs  logger.rs  mod.rs  npm.rs  performance.rs  spinner.rs  styles.rs
test-packages/pkg1/: package.json
test-packages/pkg2/: package.json
test-packages/pkg3/: package.json
