[package]
name = "monox"
version = "0.2.5"
edition = "2021"
description = "轻量级 monorepo 构建工具"
authors = ["Simple Data Team"]

[[bin]]
name = "monox"
path = "src/main.rs"

[dependencies]
# CLI 框架
clap = { version = "4.4", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 图算法
petgraph = "0.6"

# 版本比较
semver = "1.0"

# 文件系统
glob = "0.3"
walkdir = "2.0"

# HTTP 请求
reqwest = { version = "0.11", features = ["json"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 进度条
indicatif = "0.17"

# 颜色输出
colored = "2.0"
atty = "0.2"

# 随机数
rand = "0.8"

# CPU 核心数检测
num_cpus = "1.0"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
serde_json = "1.0"
